plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'it.unicam.cs.mpgc'
version = '1.0.0'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

javafx {
    version = '21'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation 'com.google.code.gson:gson:2.10.1'
}

application {
    mainClass = 'it.unicam.cs.mpgc.rpg129774.Main'
}

run {
    jvmArgs += [
        '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
    ]
}
